# campuspulse

./: .gitignore  Dockerfile  docker-compose.aws.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/static/: app.js  auth.js  profile.js
app/templates/: index.html  login.html  profile.html  signup.html
