[project]
name = "campuspulse"
version = "0.1.0"
description = "CampusPulse FastAPI app"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "psycopg[binary]==3.2.3",
  "python-dotenv==1.0.1",
  "jinja2==3.1.4",
  "httpx==0.27.2",
  "apscheduler==3.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
